--- a/.github/workflows/sonarbuild.yml
+++ b/.github/workflows/sonarbuild.yml
@@ -10,21 +10,28 @@ on:
 jobs:
   build:
     name: Build and analyze
-    runs-on: windows-latest
-    
+    runs-on: self-hosted  # <-- Important: runs on your machine
+
     steps:
-      - uses: actions/checkout@v4
+      # Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - uses: SonarSource/sonarqube-scan-action@v5
+          fetch-depth: 0  # Shallow clones should be disabled for proper analysis
+
+      # Run SonarQube scanner
+      - name: Run SonarQube scanner
+        uses: SonarSource/sonarqube-scan-action@v5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      # If you wish to fail your job when the Quality Gate is red, uncomment the
-      # following lines. This would typically be used to fail a deployment.
-      # We do not recommend to use this in a pull request. Prefer using pull request
-      # decoration instead.
-      # - uses: SonarSource/sonarqube-quality-gate-action@v1
+          SONAR_HOST_URL: http://localhost:9000  # Self-hosted URL
+          # Optional: specify project key
+          # SONAR_PROJECT_KEY: my_project_key
+          # SONAR_PROJECT_NAME: My Project Name
+
+      # Optional: Quality Gate check (uncomment if needed)
+      # - name: SonarQube Quality Gate Check
+      #   uses: SonarSource/sonarqube-quality-gate-action@v1
       #   timeout-minutes: 5
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
