--- a/.github/workflows/klocwork.yml
+++ b/.github/workflows/klocwork.yml
@@ -1,72 +1,37 @@
-name: Build and Test BACnet Stack
+name: Build
 
-on:      
-  pull_request:
-    branches:
-      - master
+on:
   push:
     branches:
       - master
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
-  klocwork:
-    runs-on: self-hosted
-
-    name: Run Klocwork Analysis
-
-    env:
-      KLOCWORK_LTOKEN: C:\Users\palan\.klocwork\ltoken
-      KW_URL: http://192.168.0.127:8082
-      KW_PROJECT: Demo
-      KW_USER: ${{ secrets.KW_USER }}
-      KW_PASS: ${{ secrets.KW_PASS }}
-      KW_REPORT_NAME: cxx_testsuite_report
-      KW_REPORT_DIR: reports
-      KLOCWORK_BIN: D:\kw_cmd_24.4\bin
+  build:
+    name: Build and analyze
+    runs-on: self-hosted  # <-- Important: runs on your machine
 
     steps:
-      - name: Checkout source code
+      # Checkout the repository
+      - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for proper analysis
 
-      - name: Print current user
-        shell: cmd
-        run: whoami
+      # Run SonarQube scanner
+      - name: Run SonarQube scanner
+        uses: SonarSource/sonarqube-scan-action@v5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: http://localhost:9000  # Self-hosted URL
+          # Optional: specify project key
+          # SONAR_PROJECT_KEY: my_project_key
+          # SONAR_PROJECT_NAME: My Project Name
 
-      - name: Test connectivity to Klocwork server
-        shell: cmd
-        run: curl.exe -v %KW_URL%
-
-      - name: Clean previous Klocwork state
-        shell: cmd
-        run: |
-          if exist "%GITHUB_WORKSPACE%\.kwps" rmdir /s /q "%GITHUB_WORKSPACE%\.kwps"
-          if exist "%GITHUB_WORKSPACE%\Build" rmdir /s /q "%GITHUB_WORKSPACE%\Build"
-
-      - name: Authenticate with Klocwork
-        shell: cmd
-        run: |
-          set KWAUTH_NONINTERACTIVE=true
-          "%KLOCWORK_BIN%\kwauth.exe" --url "%KW_URL%" --user "%KW_USER%" --password "%KW_PASS%"
-
-      - name: Run Klocwork CLI analysis
-        shell: cmd
-        run: |
-          set PATH=%PATH%;%KLOCWORK_BIN%
-          cd /d %GITHUB_WORKSPACE%
-
-          echo Cleaning previous build...
-          if exist .kwlp rmdir /s /q .kwlp
-          if exist .kwps rmdir /s /q .kwps
-          if exist Build rmdir /s /q Build
-          if exist kwinject.out del /f /q kwinject.out
-          if exist %KW_REPORT_NAME%.txt del /f /q %KW_REPORT_NAME%.txt
-          if exist %KW_REPORT_NAME%.pdf del /f /q %KW_REPORT_NAME%.pdf
-          if exist %KW_REPORT_DIR% rmdir /s /q %KW_REPORT_DIR%
-
-          echo Starting build with kwinject...
-
-          "%KLOCWORK_BIN%\kwinject.exe" make
-          "%KLOCWORK_BIN%\kwcheck.exe" create --url %KW_URL%/%KW_PROJECT%
-          "%KLOCWORK_BIN%\kwcheck.exe" set license.host=192.168.0.127 license.port=27000
-          "%KLOCWORK_BIN%\kwcheck.exe" run -pd .kwlp -b kwinject.out
-          "%KLOCWORK_BIN%\kwcheck.exe" list -y -l -F detailed -pd .kwlp > "%KW_REPORT_NAME%.txt"
+      # Optional: Quality Gate check (uncomment if needed)
+      # - name: SonarQube Quality Gate Check
+      #   uses: SonarSource/sonarqube-quality-gate-action@v1
+      #   timeout-minutes: 5
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
