--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,2 @@
-sonar.projectKey=sonar_github
+#sonar.projectKey=sonar_github
+sonar.projectKey=palanivel1991_cxx_testsuite_7209bccb-3e86-4bef-ba8c-f0e7b5c41a67
