--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@
 #sonar.projectKey=palanivel1991_cxx_testsuite_7209bccb-3e86-4bef-ba8c-f0e7b5c41a67
 #sonar.projectKey=palanivel1991_cxx_testsuite_b76eb9b7-32fc-45c8-8035-3b7267fc283b
 sonar.projectKey=palanivel1991_cxx_testsuite_667a47e7-c1ff-4fe4-accc-1f7a63d51b8b
+sonar.projectKey=jenkins
